# deplar

./: .coverage  .gitignore  CLAUDE.md  README.md  deps.json  org-deps.json  pyproject.toml  test.py
.github/workflows/: ci.yml
schemas/: deps.schema.json
scripts/: pretty_walk.py
src/deplar/: agent.py  cli.py  impact.py  mcp_server.py  skill.py  ui.py  validator.py  worktree.py
src/deplar/graph/: manifest.py  store.py  symbol_store.py
src/deplar/output/: claude_md.py
src/deplar/scanner/: ast_parser.py  base_path_detector.py  config_scanner.py  endpoints.py  fanout.py  identity.py  network_detector.py  org_scanner.py  reconciler.py  resolver.py  route_detector.py  surface_matcher.py  symbols.py  walker.py
tests/: test_agent.py  test_ast_parser.py  test_base_path.py  test_claude_md.py  test_detection_quality.py  test_endpoints.py  test_fanout.py  test_http_complete.py  test_identity.py  test_impact.py  test_integration.py  test_manifest.py  test_network_detector.py  test_org_scanner.py  test_reconciler.py  test_route_detector.py  test_skill_memory.py  test_surface_matching.py  test_symbol_store.py  test_symbols.py  test_ui.py  test_validator.py  test_value_holder.py  test_walker.py  test_worktree.py
tests/fixtures/: .gitignore  deplar.yaml
tests/fixtures/fanout_repo/src/: DoliClient.java  PnrController.java  PnrService.java
tests/fixtures/fanout_repo/src/main/resources/: application.properties
tests/fixtures/order-service/src/: main.py
tests/fixtures/payment-service/src/: PaymentController.java  PaymentService.java  UserSyncService.java
tests/fixtures/payment-service/src/main/resources/: application.yml
tests/fixtures/pss/src/: PnrController.java
tests/fixtures/pss/src/main/resources/: application.properties
tests/fixtures/sample_repo/src/: OrderService.java  events.py  main.py  payments_client.py  utils.py
tests/fixtures/user-service/src/: client.ts  routes.ts
