[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[project]
name = "deplar"
version = "0.1.0"
description = "Dependency radar for multi-repo codebases"
readme = "README.md"
requires-python = ">=3.11"
dependencies = [
    "typer>=0.12",
    "rich>=13",
    "networkx>=3",
    "tree-sitter>=0.23",
    "tree-sitter-python>=0.23",
    "tree-sitter-java>=0.23",
    "tree-sitter-typescript>=0.23.2",
    "pathspec>=0.12",
    "pydantic>=2",
    "jsonschema>=4",
]

[project.scripts]
deplar = "deplar.cli:app"

[project.urls]
Homepage = "https://github.com/srujana20/deplar"
Repository = "https://github.com/srujana20/deplar"

[tool.hatch.build.targets.wheel]
packages = ["src/deplar"]
