[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[project]
name = "deplar"
version = "0.1.0"
description = "Dependency radar for multi-repo codebases"
readme = "README.md"
requires-python = ">=3.11"
dependencies = [
    "typer>=0.12",
    "rich>=13",
    "networkx>=3",
    "tree-sitter>=0.23",
    "tree-sitter-python>=0.23",
    "tree-sitter-java>=0.23",
    "tree-sitter-typescript>=0.23.2",
    "pathspec>=0.12",
    "pydantic>=2",
    "jsonschema>=4",
    "pyyaml>=6",
    "mcp>=1.2",
]

[project.scripts]
deplar = "deplar.cli:app"
deplar-mcp = "deplar.mcp_server:main"

[project.optional-dependencies]
dev = [
    "pytest>=8",
    "pytest-cov>=5",
    "pyyaml>=6",
]

[tool.pytest.ini_options]
testpaths = ["tests"]
addopts = "--tb=short"

[tool.coverage.run]
source = ["src/deplar"]
omit = ["*/tests/*"]

[tool.ruff]
line-length = 100
target-version = "py311"

[tool.ruff.lint]
select = ["E", "F", "I"]
ignore = ["E501"]

[project.urls]
Homepage = "https://github.com/srujana20/deplar"
Repository = "https://github.com/srujana20/deplar"

[tool.hatch.build.targets.wheel]
packages = ["src/deplar"]
